--- a/etch a sketch/styles.css
+++ b/etch a sketch/styles.css
@@ -15,12 +15,12 @@ h1 {
 }
 
 #box1 {
-    background-color: lightblue;
+    background-color: lightseagreen;
     height: 80px;
 }
 
 #box2a {
-    background-color:lightblue;
+    background-color: lightseagreen;
     height: 750px;
     width: 200px;
 }
@@ -31,13 +31,13 @@ h1 {
     border: 2px solid black;
 }
 #box2b {
-    background-color: lightblue;
+    background-color: lightseagreen;
     height: 750px;
     width: 200px;
 }
 
 #box3 {
-    background-color: lightblue;
+    background-color: lightseagreen;
     height: 80px;
 }
 
@@ -57,5 +57,60 @@ h1 {
 
 #btn {
     margin-top: 40px;
+    height: 40px;
+    width: 100px;
+}
+
+#colorPaleteControl {
+    display: flex;
+}
+
+#colorPalete {
+    flex: 1;    
+}
+
+.colors {
+    margin-left: 10px;
+    margin-top: 30px;
+    height: 30px;
+    width: 30px;
+    border: 2px black solid;
+}
+
+#mainColor {
+    height: 100px;
+    width: 100px;
+    border: 6px solid black;
+    margin-left: 30px;
+    margin-top: 30px;
+    background-color: black;
+}
+
+#red {
+    background-color: red;
+}
+#blue {
+    background-color: blue;
+}
+#green {
+    background-color: green;
+}
+#black {
+    background-color: black;
+}
+#gray {
+    background-color: gray;
+}
+#yellow {
+    background-color: yellow;
+}
+#pink {
+    background-color: pink;
+}
+#purple {
+    background-color: purple;
+}
+#orange {
+    background-color: orange;
 }
 
